# Asma

./: .editorconfig  .gitignore  .travis.yml  README.md  addons.c  asma.c  asma.desktop  asma.h  io.github.busquetsaguilopau.Asma.json  meson.build  meson_post_install.py
data/: asma.desktop  asma.glade  io.github.busquetsaguilopau.Asma.gschema.xml  io.github.her001.Asma.gschema.xml  meson.build
src/: CMakeLists.txt  addons.c  addons.h  appmenu.ui  asma.c  asma.glade  asma.gresource.xml  asma.h  errors.c  errors.h  gmenu.ui  launcher.c  launcher.h  menus.ui  meson.build  mods-placeholder.ui  mods.c  mods.h  preferences.glade  prefs.c  prefs.h  settings.c  settings.h
